refactor: Fixture 적용